Implemented component based system for rendering and a component based router along with it, also added documentation for phase 2 api changes.
